# ArrayFireWithGbenchGtest

./: CMakeLists.txt  README.md  install_google_benchmark_and_test.sh  main.cpp
benchmarks/: gbench_test.cpp
docker/cuda10.1_ubuntu18_04/: fft.cpp  result.md
docker/cuda10_1_ubuntu18_04/: CMakeLists.txt  test_backend.cpp
src/: io_sample.cpp
src/utils/: utils.cpp  utils.h
tests/: gtest_cout.h  gtest_test.cpp
